# Native_SDK

./: .gitmodules  CMakeLists.txt  vcpkg.json
cmake/modules/: vcpkg-utils.cmake
cmake/utilities/: compile_options.cmake  spirv.cmake
examples/Vulkan/: CMakeLists.txt
examples/Vulkan/02_IntroducingPVRShell/: VulkanIntroducingPVRShell.cpp
examples/Vulkan/BilrepFlip/: BilrepFlip.cpp  CMakeLists.txt  bilrep_data.cpp
framework/PVRAssets/fileio/: PODReader.cpp
framework/PVRCore/: Errors.h  Log.h
framework/PVRCore/types/: Types.h
framework/PVRShell/: StateMachine.cpp  StateMachine.h
framework/PVRShell/OS/Linux/: InternalOS.cpp
framework/PVRUtils/Vulkan/: ShaderUtilsVk.cpp
framework/PVRVk/: pvrvk_vulkan_wrapper.h
vscode-configs/: launch.json  swbuild-ubuntu.json  tasks.json
